# booking_hub

./: .gitignore  alembic.ini  pyproject.toml  requirements_dev.txt
config/: main_bot_config.template.toml  multibot_config.template.toml
src/hub/application/bot/: create.py  exceptions.py  get.py  get_branches.py  get_cities.py  get_masters.py  get_services.py
src/hub/application/branch/: create.py  delete.py  exceptions.py  get.py  update.py
src/hub/application/city/: create.py  delete.py  exceptions.py  get.py  get_branches.py  update.py
src/hub/application/client/: create.py  exceptions.py  get.py
src/hub/application/common/: exceptions.py  interactor.py  interfaces.py
src/hub/application/manager/: create.py  exceptions.py  get.py  get_bots.py
src/hub/application/master/: create.py  delete.py  exceptions.py  get.py  get_master_available_branches.py  get_master_available_services.py  update.py
src/hub/application/service/: create.py  delete.py  exceptions.py  get.py  update.py
src/hub/domain/: new_type.py
src/hub/domain/models/: appointment.py  bot.py  branch.py  city.py  client.py  manager.py  master.py  service.py  service_master.py  timezone.py
src/hub/infrastructure/: config_loader.py  jinja_filters.py  webhook_url.py
src/hub/infrastructure/database/: config.py  converters.py  models.py
src/hub/infrastructure/database/adapters/: base.py  bot.py  (+6 more)
src/hub/infrastructure/di/: injectors.py  main.py
src/hub/infrastructure/redis_storage/: config.py  factories.py
src/hub/main/: bot.py  config.py
src/hub/presentation/client_bot/: setup.py
(+32 files in other folders)
